--- a/spotipy-dataviz.env
+++ b/spotipy-dataviz.env
@@ -1,3 +1,3 @@
-export SPOTIPY_CLIENT_ID='your-spotify-client-id'
-export SPOTIPY_CLIENT_SECRET='your-spotify-client-secret'
-export SPOTIPY_REDIRECT_URI='your-app-redirect-url'
+export SPOTIPY_CLIENT_ID='0a9084e7513746f6aeb0c8d562beaa2e'
+export SPOTIPY_CLIENT_SECRET='4dc4fba7363e4f5b9f3627ed3e39c9c9'
+export SPOTIPY_REDIRECT_URI='http://localhost/'
